WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165673
Password fields should not show the emoji button in TouchBar
https://bugs.webkit.org/show_bug.cgi?id=165673
Summary
Password fields should not show the emoji button in TouchBar
Beth Dakin
Reported
2016-12-09 12:34:45 PST
Passsword fields should not show the emoji button in TouchBar
rdar://problem/29235739
Attachments
Patch
(17.75 KB, patch)
2016-12-09 12:51 PST
,
Beth Dakin
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2016-12-09 12:51:19 PST
Created
attachment 296679
[details]
Patch
WebKit Commit Bot
Comment 2
2016-12-09 12:53:08 PST
Attachment 296679
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Cocoa/WebViewImpl.mm:1100: Extra space in capture list. [whitespace/brackets] [4] ERROR: Source/WebKit/mac/WebView/WebView.mm:9546: Extra space in capture list. [whitespace/brackets] [4] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Wenson Hsieh
Comment 3
2016-12-09 13:20:11 PST
Comment on
attachment 296679
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=296679&action=review
> Source/WebKit2/UIProcess/Cocoa/WebViewImpl.mm:988 > + defaultItemIdentifiers = passwordTextTouchBarDefaultItemIdentifiers();
Should we allow the user to customize out the text candidates item while the password text touch bar is open?
Beth Dakin
Comment 4
2016-12-09 13:45:00 PST
(In reply to
comment #3
)
> Comment on
attachment 296679
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=296679&action=review
> > > Source/WebKit2/UIProcess/Cocoa/WebViewImpl.mm:988 > > + defaultItemIdentifiers = passwordTextTouchBarDefaultItemIdentifiers(); > > Should we allow the user to customize out the text candidates item while the > password text touch bar is open?
This is definitely debatable. I decided not to make it customizable since most of the other password fields on macOS are not customizable. (Then again, most other password fields are also blank and not blank candidates.) It does still honor the typing suggestions system preference. We should keep thinking about this.
Beth Dakin
Comment 5
2016-12-09 14:01:29 PST
Thanks Wenson!
https://trac.webkit.org/changeset/209626
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug